--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,7 @@
-set-option -g prefix C-Space
-set -g base-index 1
 unbind-key C-b
+
+set -g base-index 1
 set -g status-position top
+
+set-option -g prefix C-Space
+set-option -g escape-time 10
