--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,6 +2,7 @@ unbind-key C-b
 
 set -g base-index 1
 set -g status-position top
+set -g status-right ""
 
 set-option -g prefix C-Space
 set-option -g escape-time 10
