--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -82,8 +82,9 @@ separator-foreground = ${colors.flamingo}
 
 font-0 = JetBrainsMono Nerd Font Mono:size=12;6
 
-modules-left = xworkspaces xwindow
-modules-right = pulseaudio battery memory cpu wlan date
+modules-left = xworkspaces
+modules-right = pulseaudio battery memory cpu wlan systray
+modules-center = date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
