--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -34,13 +34,6 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-# kill any hanging polybar processes
-exec_always --no-startup-id killall polybar
-exec_always --no-startup-id --no-startup-id ~/.config/polybar/launch_polybar.sh
-
-# picom
-exec_always --no-startup-id picom -b
-
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -54,9 +47,6 @@ floating_modifier $mod
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
-
-# start a terminal
-bindsym $mod+Return exec flatpak run org.wezfurlong.wezterm
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -195,6 +185,54 @@ bindsym $mod+r mode "resize"
 # bar {
 #         status_command i3status
 # }
+
+# Custom
+
+# Catppuccin Mocha
+set $rosewater #f5e0dc
+set $flamingo #f2cdcd
+set $pink #f5c2e7
+set $mauve #cba6f7
+set $red #f38ba8
+set $maroon #eba0ac
+set $peach #fab387
+set $yellow #f9e2af
+set $green #a6e3a1
+set $teal #94e2d5
+set $sky #89dceb
+set $sapphire #74c7ec
+set $blue #89b4fa
+set $lavender #b4befe
+set $text #cdd6f4
+set $subtext1 #bac2de
+set $subtext0 #a6adc8
+set $overlay2 #9399b2
+set $overlay1 #7f849c
+set $overlay0 #6c7086
+set $surface2 #585b70
+set $surface1 #45475a
+set $surface0 #313244
+set $base #1e1e2e
+set $mantle #181825
+set $crust #11111b
+
+# target                 title     bg    text   indicator  border
+client.focused           $lavender $base $text  $rosewater $lavender
+client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
+
+# kill any hanging polybar processes
+exec_always --no-startup-id killall polybar
+exec_always --no-startup-id --no-startup-id ~/.config/polybar/launch_polybar.sh
+
+# picom
+exec_always --no-startup-id picom -b
+
+# start a wezterm terminal
+bindsym $mod+Return exec flatpak run org.wezfurlong.wezterm
 
 bindsym $mod+Shift+Return exec google-chrome
 bindsym $mod+space exec rofi -show drun
