--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -231,8 +231,9 @@ exec_always --no-startup-id --no-startup-id ~/.config/polybar/launch_polybar.sh
 # picom
 exec_always --no-startup-id picom -b
 
-# start a wezterm terminal
-bindsym $mod+Return exec flatpak run org.wezfurlong.wezterm
+# wallpaper
+exec_always --no-startup-id feh --bg-scale ~/Pictures/wallpaper.png
+
 
 # Set inner gaps (between windows)
 gaps inner 10
@@ -246,5 +247,6 @@ smart_gaps on
 # Remove title bars (looks better with gaps)
 for_window [class=".*"] border pixel 2
 
+bindsym $mod+Return exec flatpak run org.wezfurlong.wezterm
 bindsym $mod+Shift+Return exec google-chrome
 bindsym $mod+space exec rofi -show drun
